--- a/themes/blade-hugo/layouts/partials/head.html
+++ b/themes/blade-hugo/layouts/partials/head.html
@@ -10,7 +10,7 @@
 	{{ template "_internal/google_analytics_async.html" . }}
 {{ end }}
 <link rel="stylesheet" href="{{ "css/bulma.css" | relURL }}" />
-<link rel="stylesheet" href="{{ "css/bulma-divider.css | relURL }}" />
+<link rel="stylesheet" href="{{ "css/bulma-divider.css" | relURL }}" />
 <link rel="stylesheet" href="{{ "css/style.css" | relURL }}" />
 <link rel="stylesheet" href="{{ "css/animista.css" | relURL }}" />
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
